--- a/Site/index.html
+++ b/Site/index.html
@@ -65,11 +65,11 @@
           <div class="div-projects"> 
             <div class="projetos">
               <button onclick="retrofy()" style="border: none; background-color: transparent;"><img src="imgs/projeto1.png" alt="" width="300px"></button>
-              <p>Clique para saber mais.</p>
+              <p>Click to learn more.</p>
             </div>
             <div class="projetos">
               <button onclick="hoptech()" style="border: none; background-color: transparent;"><img src="imgs/projeto2.png" alt="" width="300px"></button>
-              <p>Clique para saber mais.</p>
+              <p>Click to learn more.</p>
             </div>
             </div>
           </div>
